--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
       <div class="bg-top">
-        <img src="/images/bg-top.svg" alt="bg-top" />
+        <img src="./images/bg-top.svg" alt="bg-top" />
       </div>
       <div class="title">
         <h1>Our Pricing</h1>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="bg-bottom">
-        <img src="/images/bg-bottom.svg" alt="" />
+        <img src="./images/bg-bottom.svg" alt="" />
       </div>
 
       <!--  Container Closer  -->
